/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package uno_ets_2026_base;

/**
 *
 * @author sebastian
 */
public class Jugador {
    private String nombre = "";
    private int id = 0;
    private int rango = 0;
    
}
